@@ -1,3 +1,7 @@
+2024-03-03  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* Fix double invocation of rc.local_shutdown.
+
 2024-03-02  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* inittab.C: Modify invocation of /etc/rc.d/rc.inet2 from
